--- a/ansible/roles/unh698/vars/main.yml
+++ b/ansible/roles/unh698/vars/main.yml
@@ -1,5 +1,5 @@
 ---
 # Here we define variables in a key: value setting
 # that will be used in the unh698 role.
-unh698_image: docker-cloud-test
+unh698_image: crazydiamond567/docker-cloud-test
 unh698_command: python unh698.py
