--- a/ansible/roles/unh698/tasks/main.yml
+++ b/ansible/roles/unh698/tasks/main.yml
@@ -28,5 +28,5 @@
 #   http://docs.ansible.com/ansible/uri_module.html
 - name: verify that webserver is running
   uri:
-    url: http://54.67.58.144
+    url: "http://54.67.58.144:{{ unh698_host_port }}/"
     method: GET
